src/App.scss
// @import url(../public/Fonts/NeueMontreal/neuemontreal.scss);
@import url(./assets/Fonts/MonsSans/monasans.css);
@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  // outline: 1px solid orange;
}

::selection {
  background-color: #1a1a1a;
  color: #ffffff;
}

html {
  scrollbar-width: none;
  -ms-overflow-style: none;
  &::-webkit-scrollbar {
    display: none;
  }
}

body {
  font-family: "Mona Sans";
  max-width: 100vw;
}

img {
  user-drag: none;
  -webkit-user-drag: none;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

a {
  text-decoration: none;
  color: #000;
}

.bounds {
  width: 100%;
  height: 100%;
  position: absolute;
  left: 0;
  top: 0;
  pointer-events: all;
  cursor: pointer;
  &:hover {
    transform: scale(5);
  }
}

